[project]
name = "cibmtr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaggle>=1.6.17",
    "lifelines>=0.30.0",
    "lightgbm>=4.5.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "xgboost>=2.1.3",
]
